--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
     <head>
         <title>RR</title>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
-        <link rel="icon" href="./img/favicon.ico">
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="icon" href="img/favicon.ico">
+        <link rel="stylesheet" href="css/styles.css">
+        <style>
+            canvas {
+                border-radius: 5px;
+            }
+        </style>
     </head>
     <body>
         <a href="login.html"><img src="img/login.png" alt="Login Icon" class="login-icon"></a>
@@ -84,5 +89,6 @@
             </p>
         </footer>
         <script src="js/acetateDisc.js"></script>
+        <!--<script type="text/javascript" src="js/staticLogo.js"></script>-->
     </body>
 </html>
