--- a/signup.html
+++ b/signup.html
@@ -32,6 +32,14 @@
                 </form>
             </section>
         </section>
+        <section id="myModal" class="modal" style="border-color: black;">
+            <!-- Modal content -->
+            <section class="modal-content">
+                <span id="closeModal" class="close">&times;</span>
+                <h1>Errors:</h1>
+                <p id="errMsg">Modal Text</p>
+            </section>
+        </section>
         <script src="js/acetateDisc.js"></script>
         <script src="js/script.js"></script>
     </body>
