--- a/viewAlbum.html
+++ b/viewAlbum.html
@@ -5,30 +5,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/favicon.ico">
     <title>View Album | Rusty Records</title>
-    <link rel="stylesheet" href="./css/main-styles.css">
+    <link rel="stylesheet" href="css/main-styles.css">
 </head>
 <body>
     <nav class="main-nav">
         <h2 style="display: none;">NavBar</h2>
         <ul>
-            <li class="nav-item-1"><a href="viewAlbum.html">Album</a></li>
-            <li class="nav-item-2"><a href="viewArtist.html">Artist</a></li>
+            <li class="nav-item-1"><a href="index.html">Home</a></li>
+            <li class="nav-item-2"><a href="viewAlbum.html" class="active">Album</a></li>
             <span class="nav-item-3">
                 <a href="index.html">
                     <!--<img src="./img/logo_tp.png" alt="Rusty Records Logo" id="logo">-->
                     <canvas class="logo" id="acetateDisc" id="logo" title="Rusty Records" data-logo="Rusty Records"></canvas>
                 </a>
             </span>
-            <li class="nav-item-4"><a href="viewLyrics.html">Lyrics</a></li>
-            <li class="nav-item-5"><a href="aboutUs.html">About Us</a></li>
+            <li class="nav-item-4"><a href="viewArtist.html">Artist</a></li>
+            <li class="nav-item-5"><a href="viewLyrics.html">Lyrics</a></li>
         </ul>
     </nav>
     <section class="top-display-container">
         <section class="left-disp">
             <h2>Album List</h2>
+            <ul>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/online_media_62jb.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Album 1</h3>
+                        <p>Singers</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/listening_1u79.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Album 2</h3>
+                        <p>Singers</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/online_media_62jb.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Album 3</h3>
+                        <p>Singers</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/listening_1u79.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Album 4</h3>
+                        <p>Singers</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/online_media_62jb.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Album 5</h3>
+                        <p>Singers</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/listening_1u79.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Album 6</h3>
+                        <p>Singers</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/online_media_62jb.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Album 7</h3>
+                        <p>Singers</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/listening_1u79.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Album 8</h3>
+                        <p>Singers</p>
+                    </span>
+                </li>
+            </ul>
         </section>
         <section class="right-disp">
-            <h2>Songs List</h2>
+            <h2>Songs in Selected Album</h2>
         </section>
     </section>
     <footer class="flex-container">
