--- a/viewArtist.html
+++ b/viewArtist.html
@@ -11,24 +11,105 @@
     <nav class="main-nav">
         <h2 style="display: none;">NavBar</h2>
         <ul>
-            <li class="nav-item-1"><a href="viewAlbum.html">Album</a></li>
-            <li class="nav-item-2"><a href="viewArtist.html">Artist</a></li>
+            <li class="nav-item-1"><a href="index.html">Home</a></li>
+            <li class="nav-item-2"><a href="viewAlbum.html">Album</a></li>
             <span class="nav-item-3">
                 <a href="index.html">
                     <!--<img src="./img/logo_tp.png" alt="Rusty Records Logo" id="logo">-->
                     <canvas class="logo" id="acetateDisc" id="logo" title="Rusty Records" data-logo="Rusty Records"></canvas>
                 </a>
             </span>
-            <li class="nav-item-4"><a href="viewLyrics.html">Lyrics</a></li>
-            <li class="nav-item-5"><a href="aboutUs.html">About Us</a></li>
+            <li class="nav-item-4"><a href="viewArtist.html" class="active">Artist</a></li>
+            <li class="nav-item-5"><a href="viewLyrics.html">Lyrics</a></li>
         </ul>
     </nav>
     <section class="top-display-container">
         <section class="left-disp">
             <h2>Artist List</h2>
+            <ul>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/online_media_62jb.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Artist 1</h3>
+                        <p>Country</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/listening_1u79.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Artist 2</h3>
+                        <p>Country</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/online_media_62jb.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Artist 3</h3>
+                        <p>Country</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/listening_1u79.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Artist 4</h3>
+                        <p>Country</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/online_media_62jb.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Artist 5</h3>
+                        <p>Country</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/listening_1u79.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Artist 6</h3>
+                        <p>Country</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/online_media_62jb.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Artist 7</h3>
+                        <p>Country</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/listening_1u79.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Artist 8</h3>
+                        <p>Country</p>
+                    </span>
+                </li>
+            </ul>
         </section>
         <section class="right-disp">
-            <h2>Artist's Songs List</h2>
+            <h2>Songs by Selected Artist</h2>
         </section>
     </section>
     <footer class="flex-container">
