--- a/viewLyrics.html
+++ b/viewLyrics.html
@@ -11,21 +11,102 @@
     <nav class="main-nav">
         <h2 style="display: none;">NavBar</h2>
         <ul>
-            <li class="nav-item-1"><a href="viewAlbum.html">Album</a></li>
-            <li class="nav-item-2"><a href="viewArtist.html">Artist</a></li>
+            <li class="nav-item-1"><a href="index.html">Home</a></li>
+            <li class="nav-item-2"><a href="viewAlbum.html">Album</a></li>
             <span class="nav-item-3">
                 <a href="index.html">
                     <!--<img src="./img/logo_tp.png" alt="Rusty Records Logo" id="logo">-->
                     <canvas class="logo" id="acetateDisc" id="logo" title="Rusty Records" data-logo="Rusty Records"></canvas>
                 </a>
             </span>
-            <li class="nav-item-4"><a href="viewLyrics.html">Lyrics</a></li>
-            <li class="nav-item-5"><a href="aboutUs.html">About Us</a></li>
+            <li class="nav-item-4"><a href="viewArtist.html">Artist</a></li>
+            <li class="nav-item-5"><a href="viewLyrics.html" class="active">Lyrics</a></li>
         </ul>
     </nav>
     <section class="top-display-container">
         <section class="left-disp">
             <h2>Songs List</h2>
+            <ul>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/online_media_62jb.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Song 1</h3>
+                        <p>Singers/Artists</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/listening_1u79.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Song 2</h3>
+                        <p>Singers/Artists</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/online_media_62jb.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Song 3</h3>
+                        <p>Singers/Artists</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/listening_1u79.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Song 4</h3>
+                        <p>Singers/Artists</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/online_media_62jb.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Song 5</h3>
+                        <p>Singers/Artists</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/listening_1u79.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Song 6</h3>
+                        <p>Singers/Artists</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/online_media_62jb.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Song 7</h3>
+                        <p>Singers/Artists</p>
+                    </span>
+                </li>
+                <hr>
+                <li class="list-info">
+                    <span class="list-item-img">
+                        <img src="img/listening_1u79.svg" alt="Not Available">
+                    </span>
+                    <span class="list-item-name">
+                        <h3>Song 8</h3>
+                        <p>Singers/Artists</p>
+                    </span>
+                </li>
+            </ul>
         </section>
         <section class="right-disp">
             <h2>Selected Song's Lyrics</h2>
