--- a/login.html
+++ b/login.html
@@ -27,6 +27,7 @@
                     <input type="password" placeholder="Enter Password" id="inpPswrd">
                     <a href="signup.html" class="link-text">Don't have an account?</a>
                     <input type="submit" value="Login" id="submitBtn">
+                    <!--<button id="submitBtn">Login</button>-->
                 </form>
             </section>
         </section>
