--- a/index.html
+++ b/index.html
@@ -5,22 +5,15 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <link rel="icon" href="img/favicon.ico">
         <link rel="stylesheet" href="css/styles.css">
-        <style>
-            canvas {
-                border-radius: 5px;
-            }
-        </style>
     </head>
     <body>
         <a href="login.html"><img src="img/login.png" alt="Login Icon" class="login-icon"></a>
         <!--<a href="signup.html"><img src="img/up.png" alt="Go Up Icon" class="go-up-icon"></a>-->
         <section id="main">
             <!--<img src="./img/logo_tp.png" alt="Logo" id=logo>-->
-            <canvas class="logo" id="acetateDisc" id="logo" title="Rusty Records" data-logo="Rusty Records"></canvas>
+            <canvas class="logo" id="acetateDisc" title="Rusty Records" data-logo="Rusty Records"></canvas>
             <h1>Rusty Records</h1>
-            <a href="#searchBy">
-                <button id="searchbtn">Search</button>
-            </a>
+            <a href="#searchBy" id="searchbtn">Search</a>
             <div class="wave wave1"></div>
             <div class="wave wave2"></div>
             <div class="wave wave3"></div>
@@ -84,8 +77,8 @@
                 </script>
             </p>
             <p class="flex-item social-links">
-                <a href="https://in.linkedin.com/in/ravikantpujari" target="blank"><img src="img/social-linkedin.png" alt="LinkedIn RKP" class="social-icon"></a>
-                <a href="https://github.com/rvkantpujari" target="blank"><img src="img/social-github.png" alt="Github RKP" class="social-icon"></a>
+                <a href="https://in.linkedin.com/in/ketansuthar" target="blank"><img src="img/social-linkedin.png" alt="LinkedIn RKP" class="social-icon"></a>
+                <a href="https://github.com/Ketan-Suthar" target="blank"><img src="img/social-github.png" alt="Github RKP" class="social-icon"></a>
             </p>
         </footer>
         <script src="js/acetateDisc.js"></script>
